Prepare to deploy

--- a/_i18n/i18n.properties
+++ b/_i18n/i18n.properties
@@ -4,3 +4,6 @@ Author=Author
 
 #XFLD,120: Label for a column title
 DateOfBirth=Date Of Birth
+
+#XFLD,120: Label for a column title
+PageCount=Page Count
